--- a/labN1/index.html
+++ b/labN1/index.html
@@ -25,6 +25,31 @@
     <h6 class="text-center text-black-50">Bootstrap</h6>
     <hr/>
   </div>
+
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-4">Первая часть</div>
+        <div class="col-sm-4">Вторая часть</div>
+        <div class="col-sm-4">Третья часть</div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">Первая часть</div>
+        <div class="col-6">Вторая часть</div>
+        <div class="col">Третья часть</div>
+    </div>
+    <div class="row">
+        <div class="col">Часть 1</div>
+        <div class="col-5">Часть 2</div>
+        <div class="col">Часть 3</div>
+    </div>
+</div>
+
+
+
+
+
   <div class="container">
     <table class="table table-bordered">
         <tr>
